# openenclave

./: CMakeLists.txt
enclave/core/: CMakeLists.txt
enclave/sgx/: verifier.c
host/: CMakeLists.txt
host/sgx/: platformquoteprovider.h  sgxquote.c  sgxquote.h
tests/: CMakeLists.txt
tests/host_perf_test/: CMakeLists.txt  README.md
tests/host_perf_test/host/: CMakeLists.txt  host.cpp
tests/intel_qve_thread_test/enc/: enc.conf
tests/intel_qve_thread_test/host/: host.cpp
tests/thread_local_alignment/enc/: CMakeLists.txt
tests/zijie_symcrypt/: CMakeLists.txt  libsymcrypt.so.103
tests/zijie_symcrypt/enc/: CMakeLists.txt  enc.c  enc.conf  openssl_deprecated.h
tests/zijie_symcrypt/host/: CMakeLists.txt  host.c
tools/oeverify/: oeverify.c
